fixed the padding problem in the card that dont let the photo fully stretch

--- a/style.css
+++ b/style.css
@@ -239,8 +239,8 @@ section{
     display: flex;
     flex-direction: column;
     flex:1;
-    padding: 1.5rem;
-    gap: 1rem;
+    padding: 0;
+    gap: 0;
 
 }
 
@@ -255,6 +255,7 @@ section{
     height: 100%;
     object-fit: cover;
     flex-shrink: 0;
+    display: block;
 
 }
 .project-info-container{
@@ -262,6 +263,7 @@ section{
     flex-direction: column;
     flex:1;
     gap: 2rem;
+    padding: 1.5rem;
 }
 .project-info-container p{
     flex: 1;
